use collect method instead to support java 8